     implementations.  This includes an EVP_PKEY to EVP_KDF bridge for
     those algorithms that were already supported through the EVP_PKEY API
     (scrypt, TLS1 PRF and HKDF).  The low-level KDF functions for PBKDF2
     and scrypt are now wrappers that call EVP_KDF.
     [David Makepeace]

  *) Build devcrypto engine as a dynamic engine.
     [Eneas U de Queiroz]

  *) Add keyed BLAKE2 to EVP_MAC.
     [Antoine Salon]

  *) Fix a bug in the computation of the endpoint-pair shared secret used
     by DTLS over SCTP. This breaks interoperability with older versions
     of OpenSSL like OpenSSL 1.1.0 and OpenSSL 1.0.2. There is a runtime
     switch SSL_MODE_DTLS_SCTP_LABEL_LENGTH_BUG (off by default) enabling
     interoperability with such broken implementations. However, enabling
     this switch breaks interoperability with correct implementations.

  *) Fix a use after free bug in d2i_X509_PUBKEY when overwriting a
     re-used X509_PUBKEY object if the second PUBKEY is malformed.
     [Bernd Edlinger]

  *) Move strictness check from EVP_PKEY_asn1_new() to EVP_PKEY_asn1_add0().
     [Richard Levitte]

  *) Change the license to the Apache License v2.0.
     [Richard Levitte]

  *) Change the possible version information given with OPENSSL_API_COMPAT.
     It may be a pre-3.0.0 style numerical version number as it was defined
     in 1.1.0, and it may also simply take the major version number.

     Because of the version numbering of pre-3.0.0 releases, the values 0,
     1 and 2 are equivalent to 0x00908000L (0.9.8), 0x10000000L (1.0.0) and
     0x10100000L (1.1.0), respectively.
     [Richard Levitte]

  *) Switch to a new version scheme using three numbers MAJOR.MINOR.PATCH.

     o Major releases (indicated by incrementing the MAJOR release number)
       may introduce incompatible API/ABI changes.
     o Minor releases (indicated by incrementing the MINOR release number)
       may introduce new features but retain API/ABI compatibility.